# RoomEnergySimulation

./: .dockerignore  .flake8  .gitignore  .openapi-generator-ignore  Caddyfile  Dockerfile  INSTALL.md  README.md  analyse_data.ipynb  analyze_data.ipynb  build_docker.sh  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt  run_docker.sh
.github/workflows/: ci.yml  lint.yml
.openapi-generator/: FILES
ansible/: README.md  inventory.yaml  setup_host.yaml  vars.yaml
data/: output_files_heating_cooling_multiple_parameters__10584_.csv  output_files_heating_cooling_multiple_parameters__12348__with wall U-value.csv  output_files_heating_two_parameters_thickness_U-value.csv  preproccesed.csv
models/: dt_reg_model.pkl
notebooks/: README.md  preprocessing.ipynb
notebooks/data/: output_files_heating_cooling_multiple_parameters__12348_.csv
restapi/: app.py  requirements.txt
src/: model.py  preprocess_data.py  train.py
src/app/: __main__.py  anchor.py  app.py  encoder.py  factory.py  make_celery.py  model.py  util.py
src/app/controllers/: simulation_controller.py
src/app/ml/: linear_model_6_features.pkl  model.py
src/app/models/: __init__.py  base_model.py  simulation_get_default_response_inner.py  simulation_id_get200_response.py  simulation_post_request.py  t_simulation.py  t_simulation_parameters.py  t_simulation_response.py  t_simulation_result.py
src/app/openapi/: openapi.yaml
src/app/tasks/: simulation_tasks.py
tests/: conftest.py  test_dummy.py  test_ml_model.py  test_simulation.py
training_ben/: preprocessing.ipynb  training.ipynb
