[project]
name = "RoomEnergySimulation"
version = "0.0.1"
description = "Beyond room energy simulation"
dependencies = [
    "pandas>=2.1.0",
    "scikit-learn>=1.3.1",
    "numpy>=1.25.2",
    "connexion[swagger-ui]>=2.14.2",
    "celery>=5.3.4",
    "Flask>=2.2.5",
]
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
lint = [
    "flake8>=6.1.0",
    "black>=23.9.1",
]
test = [
    "pytest>=7.4.2",
    "coverage>=7.3.2",
]
dev = [
    "setuptools>=68.2.2",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "jsonschema<4.18",
]

[tool.pdm.scripts]
test = "pytest tests"
lint = "flake8"
generate = "openapi-generator generate -g python-flask -i openapi.yaml -o . -p pythonSrcRoot=src -p packageName=app"